# evosexrole

./: README.md  ani_1.sh  param.json  submit_example.sh
Individual-based simulation/: README.md  evolution of sex roles.cpp  parameter_1.txt  parameter_2.txt
Mathematical analysis/: Mathematical analysis.nb  mathematical analysis.nb
evorole/: 2021-07-05-pre_0.000_female1_1e8.json  2021-07-05-pre_0.000_female1_1e8.sh  2021-07-05-pre_0.000_female2_1e8.json  2021-07-05-pre_0.000_female2_1e8.sh  2021-07-05-pre_0.000_female3_1e8.json  2021-07-05-pre_0.000_female3_1e8.sh  2021-07-05-pre_0.000_female4_1e8.json  2021-07-05-pre_0.000_female4_1e8.sh  2021-07-05-pre_0.000_female5_1e8.json  2021-07-05-pre_0.000_female5_1e8.sh  2021-07-05-pre_0.000_male1_1e8.json  2021-07-05-pre_0.000_male1_1e8.sh  2021-07-05-pre_0.000_male2_1e8.json  2021-07-05-pre_0.000_male2_1e8.sh  2021-07-05-pre_0.000_male3_1e8.json  2021-07-05-pre_0.000_male3_1e8.sh  2021-07-05-pre_0.000_male4_1e8.json  2021-07-05-pre_0.000_male4_1e8.sh  2021-07-05-pre_0.000_male5_1e8.json  2021-07-05-pre_0.000_male5_1e8.sh  2021-07-05-pre_0.001_female1_1e8.json  2021-07-05-pre_0.001_female1_1e8.sh  2021-07-05-pre_0.001_female1_5e7.json  2021-07-05-pre_0.001_female1_5e7.sh  2021-07-05-pre_0.001_female2_1e8.json  2021-07-05-pre_0.001_female2_1e8.sh  2021-07-05-pre_0.001_female2_5e7.json  2021-07-05-pre_0.001_female2_5e7.sh  2021-07-05-pre_0.001_female3_1e8.json  (+125 more)
evorole/src/: CMakeLists.txt  evorole.cpp  evorole.h  json.cpp  json.h  main.cpp  parameter_1.txt  recorder.cpp  recorder.h  simulation.cpp  simulation.h
(+31 files in other folders)
